# SciDB

./: .gitignore  CMakeBuildFlags.cmake  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SciDB.cbp  cmake_install.cmake  compile_commands.json  install.cmake  revision  run.py  scidb.spec.in  uninstall.cmake  참고
cmake/: uninstall.cmake.in
cmake/Modules/: CompareVersionsStrings.cmake  FindBISON.cmake  FindCAT.cmake  FindDocBook.cmake  FindFLEX.cmake  FindFop.cmake  FindLibPQ.cmake  FindLibRT.cmake  FindLibReadline.cmake  FindLog4CXX.cmake  FindSED.cmake  FindScaLAPACK.cmake  FindXsltProc.cmake  Findscalapack_backup  LinuxDistroVersion.cmake
debian/: control.trusty.in  postinst  rules.in
deployment/: deploy.sh
deployment/common/: chroot_build.sh  configure_postgresql.py  configure_postgresql.sh  install_scidb_packages.sh  os_detect.sh  pip-packages.txt  prepare_R.sh  prepare_chroot.sh  prepare_coordinator.sh  prepare_httpd_cdash.sh  prepare_test.sh  prepare_toolchain.sh  register_3rdparty_scidb_repository.sh  register_scidb_repository.sh  scidb_install.sh  scidb_install_release.sh  scidb_prepare.sh  scidb_prepare_coordinator.sh  scidb_remove_release.sh  scidb_start.sh  scidb_stop.sh  setup_ccache.sh  user_access.sh
doc/: CMakeLists.txt
doc/api/: CMakeLists.txt
examples/: CMakeLists.txt  Makefile  cmake_install.cmake
examples/bestmatch/: BestMatchArray.cpp  BestMatchArray.h  CMakeLists.txt  LogicalBestMatch.cpp  Makefile  PhysicalBestMatch.cpp  cmake_install.cmake
examples/complex/: CMakeLists.txt  Makefile  cmake_install.cmake  complex.cpp
examples/example_udos/: CMakeLists.txt  Makefile  README  cmake_install.cmake  plugin.cpp  standalone_makefile
examples/fits/: CMakeLists.txt  Makefile  cmake_install.cmake  plugin.cpp
examples/loadpipe/: make_nyse_arrays.sh  nyse_feeder.py  nyse_loader.sh  nyse_tool.py  track_favorites.py
examples/match/: CMakeLists.txt  LogicalMatch.cpp  Makefile  MatchArray.cpp  MatchArray.h  PhysicalMatch.cpp  cmake_install.cmake  plugin.cpp
examples/misc/: CMakeLists.txt  Makefile  cmake_install.cmake  misc.cpp  misc_functions.h
examples/more_math/: CMakeLists.txt  Makefile  cmake_install.cmake  more_math.cpp
examples/operators/: CMakeLists.txt  LogicalStub.cpp  Makefile  PhysicalStub.cpp  cmake_install.cmake  plugin.cpp
examples/point/: CMakeLists.txt  Makefile  cmake_install.cmake  functions.h  point.cpp
examples/ra_decl/: CMakeLists.txt  Makefile  cmake_install.cmake  ra_decl.cpp
examples/rational/: CMakeLists.txt  Makefile  cmake_install.cmake  rational.cpp  rational_functions.h
examples/savebmp/: CMakeLists.txt  LogicalSaveBmp.cpp  Makefile  PhysicalSaveBmp.cpp  cmake_install.cmake  plugin.cpp
examples/tile_integration/: CMakeLists.txt  LogicalTileApply.cpp  Makefile  PhysicalTileApply.cpp  TileApplyArray.cpp  TileApplyArray.h  cmake_install.cmake  plugin.cpp
include/: SciDBAPI.h
include/array/: AccumulatorArray.h  Address.h  AddressMeta.h  AllocationBuffer.h  Array.h  ArrayDistribution.h  ArrayDistributionInterface.h  ArrayDistributionUtils.h  ArrayIterator.h  ArrayResidency.h  Chunk.h  (+43 more)
scripts/: bellman_ford_example.sh  pagerank_example.sh
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/array/: AccumulatorArray.cpp  AllocationBuffer.cpp  Array.cpp  ArrayDistribution.cpp  ArrayIterator.cpp  CMakeLists.txt  CachedDBChunk.cpp  CachedDBChunk_debug.cpp  CachedTmpChunk.cpp  Chunk.cpp  CompressedBuffer.cpp  ConstArrayIterator.cpp  ConstChunk.cpp  ConstChunkIterator.cpp  ConstItemIterator.cpp  ConstIterator.cpp  Coordinate.cpp  DBArray.cpp  DeepChunkMerger.cpp  DeepChunkMerger.h  DelegateArray.cpp  Dense1MChunkEstimator.cpp  ListArrayBuilder.cpp  Makefile  MemArray.cpp  MemChunk.cpp  MergeSortArray.cpp  Metadata.cpp  MultiStreamArray.cpp  NewDBArray.cpp  NewReplicationMgr.cpp  ParallelAccumulatorArray.cpp  RLE.cpp  SharedBuffer.cpp  SinglePassArray.cpp  SortArray.cpp  SpatialRangesChunkPosIterator.cpp  StreamArray.cpp  Tile.cpp  TransientCache.cpp  (+10 more)
src/capi/: CMakeLists.txt  ClientAuthenticator.cpp  ClientAuthenticator.h  Credential.cpp  Makefile  SciDBRemote.cpp  SciDBRemoteStubs.cpp  cmake_install.cmake  scidbapi.py.in  scidbpython.i
src/capi/pythonexamples/: doTests.sh  log4cxx.properties  pythonsample2.py  pythonsample4.py  run_pythonsample2.sh  run_pythonsample4.sh  run_pythonsample5.sh  sample.py.in  sample2.py.in
src/monitor/: CMakeLists.txt  InstanceStats.cpp  Makefile  MonitorCommunicator.cpp  MonitorConfig.cpp  QueryStats.cpp  cmake_install.cmake
src/query/ops/upgradeChunkIndex/: CMakeLists.txt  LogicalUpgradeChunkIndex.cpp  Makefile  PhysicalUpgradeChunkIndex.cpp  UpgradeChunkIndex.cpp  UpgradeChunkIndex.h  cmake_install.cmake  plugin.cpp
src/storage/: BufferMgr.cpp  BufferMgr_debug.cpp  CMakeLists.txt  IndexMap.cpp  IndexMgr.cpp  Makefile  PersistentIndexMap.cpp  StorageMgr.cpp  UnitTestStorageEngineLogical.cpp  UnitTestStorageEnginePhysical.cpp  cmake_install.cmake
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
udos/: CMakeLists.txt
udos/testjoin/: CMakeLists.txt  JoinArray.cpp  JoinArray.h  LogicalTestJoin.cpp  Makefile  PhysicalTestJoin.cpp  test.sh
utils/: CMakeLists.txt  Makefile  benchGen.cc  centos-6-x86_64.cfg  centos-7-x86_64.cfg  check_or_replace_copyright.pl  chroot_build.py  chunk_stats.py  cmake_install.cmake  f77_check.sh  init-scidb.sh  license.py.txt  license.txt  licensing.pl  loadpipe.py  make_packages.sh  make_repo.py  make_repo.sh  oprof.sh  paradigm4.lic  scidb.py.in  scidb_backup.py  scidb_config.py  spaam.py  system_report.py  update_alternatives.sh
utils/indexmapper/: CMakeLists.txt  Makefile  cmake_install.cmake  indexmapper.cpp
utils/iquery/: CMakeLists.txt  ConfigUser.h  IqueryConfig.h  Makefile  cmake_install.cmake  commands.h  iquery.cpp  iquery_parser.cpp  iquery_parser.h  keywords.cpp  keywords.h  parser.yy  scanner.h  scanner.ll
utils/scidblib/: CMakeLists.txt  Makefile  __init__.py  cmake_install.cmake  iquery_client.py  psql_client.py  scidb_control.py  scidb_math.py  util.py
utils/shim/: CMakeLists.txt
(+1389 files in other folders)
